# SpikeGLX

./: .gitattributes  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
IMEC/: NeuropixAPI.h  xdaq_npapi.cc
Src-main/: Main_WinMenu.cpp  Util.cpp  Util_osdep.cpp
Src-params/: ConfigCtl.cpp  SGLTypes.h
Src-run/: CimAcqImec.cpp  CimAcqImec.h
cmake/: codesign.cmake  deployQt.cmake
